added configurations